--- a/app/globals.css
+++ b/app/globals.css
@@ -2,7 +2,6 @@
 @tailwind components;
 @tailwind utilities;
 
-
 :root {
   --background: #ffffff;
   --foreground: #171717;
@@ -25,5 +24,6 @@
 body {
   background: var(--background);
   color: var(--foreground);
+  color: black;
   font-family: Arial, Helvetica, sans-serif;
 }
